// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing app bar should render correctly with title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed AppBar-appBar-1"
>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  >
    olá
  </h6>
</header>
`;

exports[`testing app bar should throw error with no title 1`] = `
<header
  className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed AppBar-appBar-1"
>
  <h6
    className="MuiTypography-root MuiTypography-h6"
  />
</header>
`;
